# Sequential-Recommender

./: .gitignore  PRD.md  README.md  REPORT.md  environment.yml  pyproject.toml  requirements.txt  run.py
src/recsys/: __init__.py  cli.py  config.py  data.py  experiments.py  graph_rerank.py  metrics.py  pipeline.py  recommenders.py  sasrec.py  text_rerank.py
tests/: test_graph_rerank.py  test_metrics.py  test_recommenders.py  test_sasrec.py  test_text_rerank.py
