[project]
name = "amazon-2023-sequential-recommender"
version = "0.1.0"
description = "Top-10 sequential recommender for Amazon Reviews 2023 category splits."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
amazon-recsys = "recsys.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
